modify get record
